# hw_qa_guru_python_lesson_16

./: README.md  pyproject.toml
